crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__string__multiline.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/string/multiline.lox
---
success: true
exit_code: 0
----- stdout -----
1
2
3

----- stderr -----
